# Clipster

./: .gitignore  :w  CMakeLists.txt  README.md  flake.nix  imgui.ini  main.cpp
lib/: UIManager.cpp  UIManager.hpp  desktop_capture.cpp  desktop_capture.hpp  media_player.cpp  media_player.hpp  shader_utils.cpp  shader_utils.h  video_manager.cpp  video_manager.h
shaders/: fragment_shader.glsl
